2006-03-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #3027: Wrong value for "Marked-deleted pages" in Records Statistics
	* Fixed bug #3022: "c" prefixed to local #anchors causes trouble

2006-03-28  Christian Jul Jensen  <christian@jul.net>

	* Fixed bug 999: Encoding mail headers in taskcenter
	* Fixed bug 3001: Support for multiple tables with columnsonly in alt_doc.php

2006-03-26  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0rc2
	* Various indexed_search fixes, see local ChangeLog for details
	* Small fix to typo3/stylesheet.css (admin menu)

2006-03-26  Karsten Dambekalns  <karsten@typo3.org>

	* sysext/setup/mod/index.php: Fixed detection of unavailable language packs.
	* EM: Fixed bug #2974, a rare bug when unzipping language packs, a bug with installing dependencies that needed a db update, avoid unnecessary fetching of extensions.xml.gz,
	* Fixed bug #359: EM ignores PEAR compatible classes (committed by Stucki)
	* Fixed bug #2380: t3lib_sqlparser doesn't handle LEFT OUTER JOIN (committed by Stucki)

2006-03-26  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #2777: "NOT NULL" removed from SQL gives error with MySQL 3.23.52

2006-03-25  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1390: Ereg error in class.t3lib_tsstyleconfig.php
	* Fixed bug #2415: Navigation "Icons in top frame" were rendered wrong
	* Fixed bug #0388: No subtitle field in some page types
	* Fixed bug in Install Tool: Hide warning if GraphicsMagick is used
	* Fixed some more problems with the BE stylesheet
	* Various indexed_search fixes, see local ChangeLog for details

2006-03-25  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Made "version" a required extension (necessary for workspaces)
	* Fix FE-editing bug: new-record icon appears for languages without edit rights (admin panel)
	* Fix FE-editing bug: edit panel and edit icons were shown for languages without edit rights

2006-03-25  Karsten Dambekalns  <karsten@typo3.org>
