@@ -1,3 +1,7 @@
+2006-03-29  Franz Holzinger <kontakt@fholzinger.com>
+
+	* Fixed bug #2722 and #2837: table wizard has wrong array elements
+
 2006-03-28  Ingmar Schlecht  <ingmar@typo3.org>
 
 	* Fixed bug #3027: Wrong value for "Marked-deleted pages" in Records Statistics
